--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -161,7 +161,7 @@ services:
       - /run
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup
-      - ./scripts/enable_teleport:/etc/container-boot.d/enable_teleport
+      # - ./scripts/enable_teleport:/etc/container-boot.d/enable_teleport
       - ./dockerfiles/libvirt/overlay/etc/systemd/system/teleport.service.d/override.conf:/etc/systemd/system/teleport.service.d/override.conf
     networks:
       - management
@@ -614,7 +614,7 @@ services:
       - /run
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup
-      - ./scripts/enable_teleport:/etc/container-boot.d/enable_teleport
+      # - ./scripts/enable_teleport:/etc/container-boot.d/enable_teleport
       - ./dockerfiles/libvirt/overlay/etc/systemd/system/teleport.service.d/override.conf:/etc/systemd/system/teleport.service.d/override.conf
     networks:
       - management
