--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -97,7 +97,7 @@ services:
     domainname: njk.li
     restart: always
     volumes:
-      - ./init:/docker-entrypoint-initdb.d
+      - ./resources/guacamole_initdb.sql:/docker-entrypoint-initdb.d/guacamole_initdb.sql
       - data:/var/lib/postgres/data
     environment:
       POSTGRES_USER: guacamole_user
