--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -91,20 +91,41 @@ services:
       - 3025:3025
       - 3080:3080
 
-  postgres:
-    image: postgres
-    hostname: postgres
+# TODO: guacamole images get updated, need to always keep the latest init script version with
+# docker run --rm guacamole/guacamole /opt/guacamole/bin/initdb.sh --mysq > ~/mysql_initdb.sql
+
+  # postgres:
+  #   image: postgres
+  #   hostname: postgres
+  #   domainname: njk.li
+  #   restart: always
+  #   volumes:
+  #     - ./resources/guacamole_initdb_postgres.sql:/docker-entrypoint-initdb.d/init.sql
+  #     - data:/var/lib/postgres/data
+  #   environment:
+  #     POSTGRES_USER: guacamole_user
+  #     POSTGRES_PASSWORD: some_password
+  #     POSTGRES_DB: guacamole_db
+  #   networks:
+  #     - management
+
+  mariadb:
+    image: mariadb
+    hostname: mariadb
     domainname: njk.li
     restart: always
     volumes:
-      - ./resources/guacamole_initdb_postgres.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./resources/guacamole_initdb_mysql.sql:/docker-entrypoint-initdb.d/init.sql
       - data:/var/lib/postgres/data
     environment:
-      POSTGRES_USER: guacamole_user
-      POSTGRES_PASSWORD: some_password
-      POSTGRES_DB: guacamole_db
+      # MYSQL_ROOT_PASSWORD: root_passwd
+      MYSQL_ALLOW_EMPTY_PASSWORD: yes
+      MYSQL_USER: guacamole_user
+      MYSQL_PASSWORD: some_password
+      MYSQL_DATABASE: guacamole_db
     networks:
       - management
+
   guacd:
     image: guacamole/guacd
     hostname: guacd
@@ -128,10 +149,14 @@ services:
     ports:
       - 8080:8080
     environment:
-      POSTGRES_HOSTNAME: postgres
-      POSTGRES_DATABASE: guacamole_db
-      POSTGRES_USER: guacamole_user
-      POSTGRES_PASSWORD: some_password
+      # POSTGRES_HOSTNAME: postgres
+      # POSTGRES_DATABASE: guacamole_db
+      # POSTGRES_USER: guacamole_user
+      # POSTGRES_PASSWORD: some_password
+      MYSQL_HOSTNAME: mariadb
+      MYSQL_DATABASE: guacamole_db
+      MYSQL_USER: guacamole_user
+      MYSQL_PASSWORD: some_password
       GUACD_HOSTNAME: guacd
       GUACD_PORT: 4822
       VIRTUAL_HOST: vnc.njk.li
