--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -165,7 +165,7 @@ services:
     networks:
       - management
     depends_on:
-      - postgres
+      - mariadb
       - guacd
 
 ##################################################
