--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -187,8 +187,8 @@ services:
       - /run
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup
-      # - ./scripts/enable_teleport:/etc/container-boot.d/enable_teleport
       - ./dockerfiles/libvirt/overlay/etc/systemd/system/teleport.service.d/override.conf:/etc/systemd/system/teleport.service.d/override.conf
+      - ./resources/xvnc_defaults:/etc/default/xvnc
     networks:
       - management
       - n_172_16_1_0__24
