--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -113,6 +113,8 @@ services:
     image: mariadb
     hostname: mariadb
     domainname: njk.li
+    # debugging only:
+    command: ["--log=/tmp/queries.sql"]
     restart: always
     volumes:
       - ./resources/guacamole_initdb_mysql.sql:/docker-entrypoint-initdb.d/init.sql
