--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -180,6 +180,7 @@ services:
       - ./scripts/lightdm-helper:/etc/container-boot.d/lightdm
     networks:
       - management
+      - egress
       - n_172_16_1_0__24
       - n_192_168_1_0__24
       - n_192_168_2_0__24
@@ -198,15 +199,18 @@ services:
       - n_172_16_7_0__24
       - n_172_16_8_0__24
       - n_192_168_100_0__24
+      - n_192_168_7_0__25
+      - n_192_168_7_128__25
       - n_172_16_21_0__24
       - n_10_0_21_0__24
+      - n_10_0_1_0__25
+      - n_10_0_8_0__24
       - n_10_0_1_128__25
       - n_172_16_51_0__24
       - n_192_168_6_0__25
       - n_172_16_52_0__24
       - n_192_168_6_128__25
       - n_192_168_5_0__24
-      - n_10_0_1_0__25
 
 ##################################################
 # Viptela kVMs
