--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,51 +12,51 @@ services:
 
 # <START> poor mans Ingress, until replaced with k8
 
-  # nginx:
-  #   image: nginx
-  #   labels:
-  #       com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy: "true"
-  #   container_name: nginx
-  #   restart: unless-stopped
-  #   ports:
-  #     - "80:80"
-  #     - "443:443"
-  #   volumes:
-  #     - ${NGINX_FILES_PATH}/conf.d:/etc/nginx/conf.d
-  #     - ${NGINX_FILES_PATH}/vhost.d:/etc/nginx/vhost.d
-  #     - ${NGINX_FILES_PATH}/html:/usr/share/nginx/html
-  #     - ${NGINX_FILES_PATH}/certs:/etc/nginx/certs:ro
-  #   networks:
-  #     - management
-  # nginx-gen:
-  #   image: jwilder/docker-gen
-  #   command: -notify-sighup nginx -watch -wait 5s:30s /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
-  #   container_name: nginx-gen
-  #   restart: unless-stopped
-  #   volumes:
-  #     - ${NGINX_FILES_PATH}/conf.d:/etc/nginx/conf.d
-  #     - ${NGINX_FILES_PATH}/vhost.d:/etc/nginx/vhost.d
-  #     - ${NGINX_FILES_PATH}/html:/usr/share/nginx/html
-  #     - ${NGINX_FILES_PATH}/certs:/etc/nginx/certs:ro
-  #     - /var/run/docker.sock:/tmp/docker.sock:ro
-  #     - ./nginx.tmpl:/etc/docker-gen/templates/nginx.tmpl:ro
-  #   networks:
-  #     - management
-  # nginx-letsencrypt:
-  #   image: jrcs/letsencrypt-nginx-proxy-companion
-  #   container_name: nginx-letsencrypt
-  #   restart: unless-stopped
-  #   volumes:
-  #     - ${NGINX_FILES_PATH}/conf.d:/etc/nginx/conf.d
-  #     - ${NGINX_FILES_PATH}/vhost.d:/etc/nginx/vhost.d
-  #     - ${NGINX_FILES_PATH}/html:/usr/share/nginx/html
-  #     - ${NGINX_FILES_PATH}/certs:/etc/nginx/certs:rw
-  #     - /var/run/docker.sock:/var/run/docker.sock:ro
-  #   environment:
-  #     NGINX_DOCKER_GEN_CONTAINER: "nginx-gen"
-  #     NGINX_PROXY_CONTAINER: "nginx"
-  #   networks:
-  #     - management
+  nginx:
+    image: nginx
+    labels:
+        com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy: "true"
+    container_name: nginx
+    restart: unless-stopped
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ${NGINX_FILES_PATH}/conf.d:/etc/nginx/conf.d
+      - ${NGINX_FILES_PATH}/vhost.d:/etc/nginx/vhost.d
+      - ${NGINX_FILES_PATH}/html:/usr/share/nginx/html
+      - ${NGINX_FILES_PATH}/certs:/etc/nginx/certs:ro
+    networks:
+      - management
+  nginx-gen:
+    image: jwilder/docker-gen
+    command: -notify-sighup nginx -watch -wait 5s:30s /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
+    container_name: nginx-gen
+    restart: unless-stopped
+    volumes:
+      - ${NGINX_FILES_PATH}/conf.d:/etc/nginx/conf.d
+      - ${NGINX_FILES_PATH}/vhost.d:/etc/nginx/vhost.d
+      - ${NGINX_FILES_PATH}/html:/usr/share/nginx/html
+      - ${NGINX_FILES_PATH}/certs:/etc/nginx/certs:ro
+      - /var/run/docker.sock:/tmp/docker.sock:ro
+      - ./nginx.tmpl:/etc/docker-gen/templates/nginx.tmpl:ro
+    networks:
+      - management
+  nginx-letsencrypt:
+    image: jrcs/letsencrypt-nginx-proxy-companion
+    container_name: nginx-letsencrypt
+    restart: unless-stopped
+    volumes:
+      - ${NGINX_FILES_PATH}/conf.d:/etc/nginx/conf.d
+      - ${NGINX_FILES_PATH}/vhost.d:/etc/nginx/vhost.d
+      - ${NGINX_FILES_PATH}/html:/usr/share/nginx/html
+      - ${NGINX_FILES_PATH}/certs:/etc/nginx/certs:rw
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+    environment:
+      NGINX_DOCKER_GEN_CONTAINER: "nginx-gen"
+      NGINX_PROXY_CONTAINER: "nginx"
+    networks:
+      - management
 
 # FIXME: Mkae sure to remove 'ports' section from service definitions, after enabling the above section!
 # <END> poor mans Ingress, until replaced with k8
@@ -302,7 +302,7 @@ services:
 
 # TODO: sdwan-demo.com/firewall
 # WAN interface to EGRESS
-  pfsense:
+  firewall:
     image: voobscout/viptela
     environment:
       VM_NAME: pfsense
@@ -312,7 +312,7 @@ services:
       VM_NET: '10.10.10.0/24 10.11.11.0/24 192.168.7.0/25 192.168.7.128/25'
       VM_DISK: /var/lib/libvirt/images/pfSense_234.qcow2
       VM_DISK_SIZE: 5G
-    hostname: pfsense
+    hostname: firewall
     domainname: njk.li
     privileged: true
     stdin_open: true
@@ -331,17 +331,17 @@ services:
       - n_192_168_7_128__25
 
 # TODO: connect NIC to EGRESS
-  e-core-switch:
+  core-switch:
     image: voobscout/viptela
     environment:
-      VM_NAME: e-core-switch
+      VM_NAME: core-switch
       VM_TITLE: 'E - DataCenter Core Switch'
       VM_MEM: 2048m
       VM_CPUS: 2
       VM_NET: '10.10.10.0/24 10.11.11.0/24 192.168.5.0/24 172.16.51.0/24 192.168.6.0/25 172.16.52.0/24 192.168.6.128/25'
       VM_DISK: /var/lib/libvirt/images/viptela-edge-genericx86-64.qcow2
       VM_DISK_SIZE: 4G
-    hostname: e-core-switch
+    hostname: core-switch
     domainname: njk.li
     privileged: true
     stdin_open: true
@@ -372,17 +372,17 @@ services:
       - management
       - n_192_168_5_0__24
 
-  e-dc-left:
+  dc-left:
     image: voobscout/viptela
     environment:
-      VM_NAME: e-dc-left
+      VM_NAME: dc-left
       VM_TITLE: 'E - Regional DataCenter - Left'
       VM_MEM: 2048m
       VM_CPUS: 2
       VM_NET: '10.10.10.0/24 172.16.51.0/24 192.168.6.0/25 10.0.5.0/24 172.16.5.0/24'
       VM_DISK: /var/lib/libvirt/images/viptela-edge-genericx86-64.qcow2
       VM_DISK_SIZE: 4G
-    hostname: e-dc-left
+    hostname: dc-left
     domainname: njk.li
     privileged: true
     stdin_open: true
@@ -401,17 +401,17 @@ services:
       - n_10_0_5_0__24
       - n_172_16_5_0__24
 
-  e-dc-right:
+  dc-right:
     image: voobscout/viptela
     environment:
-      VM_NAME: e-dc-right
+      VM_NAME: dc-right
       VM_TITLE: 'E - Regional DataCenter - Right'
       VM_MEM: 2048m
       VM_CPUS: 2
       VM_NET: '10.10.10.0/24 172.16.52.0/24 192.168.6.128/25 172.16.6.0/24 10.0.6.0/24'
       VM_DISK: /var/lib/libvirt/images/viptela-edge-genericx86-64.qcow2
       VM_DISK_SIZE: 4G
-    hostname: e-dc-right
+    hostname: dc-right
     domainname: njk.li
     privileged: true
     stdin_open: true
@@ -438,7 +438,7 @@ services:
       VM_TITLE: 'E - Internet router'
       VM_MEM: 2048m
       VM_CPUS: 2
-      VM_NET: '10.10.10.0/24 10.11.11.0/24 10.0.7.0/24 10.0.5.0/24 172.16.6.0/24 10.0.8.0/24 10.0.1.128/25 10.0.2.0/24 10.0.4.0/24'
+      VM_NET: '10.10.10.0/24 10.11.11.0/24 10.0.7.0/24 10.0.5.0/24 10.0.6.0/24 10.0.8.0/24 10.0.1.128/25 10.0.2.0/24 10.0.4.0/24'
       VM_DISK: /var/lib/libvirt/images/viptela-edge-genericx86-64.qcow2
       VM_DISK_SIZE: 4G
     hostname: e-inet
@@ -458,7 +458,7 @@ services:
       - egress
       - n_10_0_7_0__24
       - n_10_0_5_0__24
-      - n_172_16_6_0__24
+      - n_10_0_6_0__24
       - n_10_0_8_0__24
       - n_10_0_1_128__25
       - n_10_0_2_0__24
